@@ -1,3 +1,8 @@
+2002-05-22 09:04 UTC+0100  Dave Pearson  <davep@davep.org>
+
+	* xbase.el: Major re-working of indentation code and font lock
+	code.
+
 2002-05-20 17:50 UTC+0100  Dave Pearson  <davep@davep.org>
 
 	* xbase.el (xbase-mode): Removed `make-local-variable' declaration
